# notehub

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  build-and-publish.sh  notehub-dev.bashrc  notehub-help.md  pyproject.toml  tmp-polled-edit-mode.md
.github/: copilot-instructions.md  scheme-linking-plan.md
chats/: auth-rework.md  impl-plan-show-simplified.md  initial_cmd.md  notehub_spec_draft.md  spec-review.md
chats/archive/: design-gaps.md  show-simplified-plan.md  spec-review.md
explore/notehub-web-tmp/: AGENTS.md  CURRENT-STATUS.md  index.html  main.js  package-lock.json  package.json
explore/notehub-web-tmp/cm-docs/: .gitignore  EXPERIMENT-RESULTS.md  setup.sh
explore/notehub-web-tmp/cm-docs/.github/: copilot-instructions.md
explore/notehub-web-tmp/cm-docs/cm-kb/: README.md  START-HERE.md  SYNTAX-HIGHLIGHTING.md  api-reference.md  architecture.md  diagrams.md  examples.md  faq.md  patterns.md  troubleshooting.md  vim-mode.md
notehub-vscode/: PROMPT.md
spec/: design.md  general.md  notehub_spec_toplevel.md
src/notehub/: cache.py  cli.py  context.py  gh_wrapper.py  utils.py
src/notehub/commands/: add.py  edit.py  show.py  status.py
tests/: conftest.py
tests/unit/: test_cache.py  test_commands.py  test_commands_extended.py  test_config.py  test_context.py  test_context_priority.py  test_gh_wrapper.py  test_utils.py
